homepage bugfix on mobile

--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -1,94 +1,97 @@
-.full-page {
-  height: calc(100%);
-  width: 100%;
-  color: white;
-  background-image: url('../../../assets/imgs/big-guitar.webp');
-  background-size: cover;
-  position: relative;
-  overflow: auto;
-  z-index: 1;
+@media screen and (min-width: 800px) {
+  .full-page {
+    height: calc(100%);
+    width: 100%;
+    color: white;
+    background-image: url('../../../assets/imgs/big-guitar.webp');
+    background-size: cover;
+    position: relative;
+    overflow: auto;
+    z-index: 1;
 
-  display: grid;
-  grid-template-columns: repeat(48, 1fr);
-  grid-template-rows: repeat(28, 1fr);
+    display: grid;
+    grid-template-columns: repeat(48, 1fr);
+    grid-template-rows: repeat(28, 1fr);
 
-  .gradient {
-    z-index: 0;
-    content: '';
-    position: fixed;
-    top: 64px;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    background-image: linear-gradient(
-      to bottom,
-      #006699,
-      rgba(#6585b0, 0.8),
-      rgba(#9ca7c6, 0.6),
-      rgba(#cbccdc, 0.4),
-      rgba(#f4f4f4, 0.2)
-    );
-
-    &::after {
+    .gradient {
+      z-index: 0;
       content: '';
       position: fixed;
-      top: 0;
+      top: 64px;
+      right: 0;
+      bottom: 0;
       left: 0;
-      width: 100%;
-      height: 64px;
-      background: var(--ion-color-primary);
+      background-image: linear-gradient(
+        to bottom,
+        #006699,
+        rgba(#6585b0, 0.8),
+        rgba(#9ca7c6, 0.6),
+        rgba(#cbccdc, 0.4),
+        rgba(#f4f4f4, 0.2)
+      );
+
+      &::after {
+        content: '';
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 64px;
+        background: var(--ion-color-primary);
+      }
     }
-  }
 
-  .head-title {
-    grid-row: 4 / 18;
-    grid-column: 4 / 18;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    .head-title {
+      grid-row: 4 / 18;
+      grid-column: 4 / 18;
+      display: flex;
+      align-items: center;
+      justify-content: center;
 
-    z-index: 1;
-    font-family: 'Avenir', sans-serif;
-    font-size: 200%;
-    font-display: swap;
-    text-transform: capitalize;
-    position: relative;
-    text-align: center;
-  }
+      z-index: 1;
+      font-family: 'Avenir', sans-serif;
+      font-size: 200%;
+      font-display: swap;
+      text-transform: capitalize;
+      position: relative;
+      text-align: center;
+    }
 
-  .panel {
-    padding: 2ch;
-    grid-row: 3 / -1;
-    grid-column: 20 / -2;
-    z-index: 1;
+    .panel {
+      margin: 0;
+      padding: 2ch;
+      grid-row: 3 / -1;
+      grid-column: 20 / -2;
+      z-index: 1;
 
-    color: black;
-    overflow: hidden;
-    border-radius: 8px 8px 0 0;
-    background: #f4f4f4;
-  }
-
-  .btn-list {
-    grid-row: 18 / -2;
-    grid-column: 10 / -3;
-
-    display: flex;
-    justify-content: flex-start;
-    justify-content: space-between;
-    z-index: 1;
-    position: relative;
-
-    ion-button {
-      font-size: 120%;
-      height: 100%;
-      width: calc(33% - 1rem);
-      box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-      transition: box-shadow 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-      border-radius: 15px;
+      color: black;
       overflow: hidden;
+      border-radius: 8px 8px 0 0;
+      background: #f4f4f4;
+    }
 
-      &:hover {
-        box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
+    .btn-list {
+      grid-row: 18 / -2;
+      grid-column: 10 / -3;
+
+      display: flex;
+      justify-content: flex-start;
+      justify-content: space-between;
+      z-index: 1;
+      position: relative;
+
+      ion-button {
+        font-size: 120%;
+        height: 100%;
+        width: calc(33% - 1rem);
+        box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+        transition: box-shadow 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+        border-radius: 15px;
+        overflow: hidden;
+
+        &:hover {
+          box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
+        }
       }
     }
   }
@@ -96,37 +99,31 @@
 
 @media screen and (max-width: 800px) {
   .full-page {
-    display: block;
-
+    .gradient {
+      display: none;
+    }
     .head-title {
       display: none;
     }
-
-    .panel {
-      position: relative;
-      border-radius: 8px;
-      width: 95%;
-      margin: 2rem auto;
-    }
-
     .btn-list {
+      display: flex;
+      justify-content: flex-start;
+      justify-content: space-between;
       flex-direction: column;
+      position: relative;
 
       ion-button {
-        margin-bottom: 1rem;
-        width: 95%;
+        font-size: 120%;
+        height: 100%;
+        width: calc(100% - 1.3rem);
         margin: 1rem auto;
-
-        &:last-of-type {
-          margin-bottom: 5rem;
-        }
+        box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+        transition: box-shadow 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+        border-radius: 15px;
+        overflow: hidden;
 
         div {
-          display: flex;
-          flex-direction: column;
-          justify-content: center;
-          align-items: center;
-          min-height: 225px;
+          padding: 1rem 0;
         }
       }
     }
